--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,11 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          A: 10
+          B: 20
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          [ -z $A ] && echo Aempty || echo $A
+          [ -z $B ] && echo Bempty || echo $B
