--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         env:
-          A: 10
+          A: ${{ secrets.ORG_SECRET }}
+          B: ${{ secrets.REPO_SECRET }}
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
