--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         env:
@@ -37,5 +40,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          [ -z $A ] && echo Aempty || echo "A:$A"
-          [ -z $B ] && echo Bempty || echo "B:$B"
+          node -p "console.log(String(process.env.A).split(' '))"
+          node -p "console.log(String(process.env.B).split(' '))"
