--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,16 +29,20 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        env:
-          A: ${{ secrets.ORG_SECRET }}
-          B: ${{ secrets.REPO_SECRET }}
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          node -p "console.log(String(process.env.A).split(''))"
-          node -p "console.log(String(process.env.B).split(''))"
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.REPO_NPM_TOKEN_AUTOMATION }}
+        run: |
+          node -p "console.log(String(process.env.NODE_AUTH_TOKEN).length)"
+          npm publish --access public
