--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,11 +40,16 @@ jobs:
         with:
           registry-url: "https://registry.npmjs.org"
 
+      - name: Check secrets
+        env:
+          SECRETS_JSON: ${{ toJSON(secrets) }}
+        run: |
+          node -p "'secrets keys: ' + Object.keys(JSON.parse(process.env.SECRETS_JSON))"
+
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.ORG_NPM_TOKEN_AUTOMATION }}
         run: |
-          node -p "'token length: ' + String(process.env.NODE_AUTH_TOKEN).length"
           npm pkg set version='0.0.6'
           ISPUBLISHED=$(node ./isPublished.js)
           [ $ISPUBLISHED = true ] && echo "already published" || npm publish --access public
