--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           registry-url: "https://registry.npmjs.org"
 
-      - name: Check secrets
+      - name: Available secrets
         env:
           SECRETS_JSON: ${{ toJSON(secrets) }}
         run: |
@@ -49,7 +49,7 @@ jobs:
       - name: Check version
         id: checkVersion
         run: |
-          npm pkg set version='0.0.6'
+          npm pkg set version='0.0.7'
           ISPUBLISHED=$(node ./isPublished.js)
           [ $ISPUBLISHED = false ] && echo "notPublished=true" >> "$GITHUB_OUTPUT" || echo "already published"
 
